--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="style_main.css">
+    <link rel="stylesheet" href="css/style_main.css">
 
     <title>CTG - Rancho da Saudade</title>
 </head>
@@ -66,6 +66,6 @@
             </section>
         </footer>
     </main>
-    <script src="script_main.js"></script>
+    <script src="scripts/script_main.js"></script>
 </body>
 </html>
