correção de alguns detalhes ortograficos iniciais

--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
                 </section>
                 <section id="artigo_bottom">
                     <section id="artigo_left">
-                        <h2>Invernadas artisticas</h2>
-                        <p>As invernadas artísticas são apresentações da nossa amada cultura gaúcha, sempre tendo como base nossos valores fundamentais, como, respeito, família e amizade. O CTG Rancho da Saudade também realiza trabalhos culturais em escolas, empresas. Desse modo, é possível difundir a cultura gaúcha por meio do ensino da dança, costumes e crenças gaúchas, além de pesquisas históricas.</p>
+                        <h2>Invernadas artísticas</h2>
+                        <p>As invernadas artísticas são apresentações da nossa amada cultura gaúcha, sempre tendo como base nossos valores fundamentais, como, respeito, família e amizade. O CTG Rancho da Saudade também realiza trabalhos culturais em escolas e empresas. Desse modo, é possível difundir a cultura gaúcha por meio do ensino da dança, costumes e crenças gaúchas, além de pesquisas históricas.</p>
                     </section>
                     <section id="artigo_right">
                         <h2>Categorias:</h2>
@@ -76,31 +76,31 @@
                             <figure>
                                 <img src="img/section_artigos/img1.jpg" alt="">
                             </figure>
-                            <h3>Invernada artistica Mirim</h3>
+                            <h3>Invernada artística Mirim</h3>
                         </section>
                         <section class="right_categoria">
                             <figure>
                                 <img src="img/section_artigos/img2.jpg" alt="">
                             </figure>
-                            <h3>Invernada artistica Juvenil</h3>
+                            <h3>Invernada artística Juvenil</h3>
                         </section>
                         <section class="right_categoria">
                             <figure>
                                 <img src="img/section_artigos/img3.jpg" alt="">
                             </figure>
-                            <h3>Invernada artistica Adulta</h3>
+                            <h3>Invernada artística Adulta</h3>
                         </section>
                         <section class="right_categoria">
                             <figure>
                                 <img src="img/section_artigos/img4.jpg" alt="">
                             </figure>
-                            <h3>Invernada artistica Veterrano +30</h3>
+                            <h3>Invernada artística Veterano +30</h3>
                         </section>
                         <section class="right_categoria">
                             <figure>
                                 <img src="img/section_artigos/img5.jpg" alt="">
                             </figure>
-                            <h3>Invernada artistica Xirú (+40)</h3>
+                            <h3>Invernada artística Xirú (+40)</h3>
                         </section>
                     </section>
                 </section>
