--- a/index.html
+++ b/index.html
@@ -121,6 +121,6 @@
             </section>
         </footer>
     </main>
-    <script src="scripts/script_main.js"></script>
+    <script src="scripts/script_main.js" type="text/javascript"></script>
 </body>
 </html>
