inclusão de area
inclusão da area de notificações e footer

--- a/index.html
+++ b/index.html
@@ -106,18 +106,67 @@
                 </section>
             </section>
             <section id="institutional">
-
+                <div id="section_intitutional_video"></div>
+                <video id="player" loop poster="" title="Vídeo institucional CTG" preload="none">
+                    <source  src="" type="video/mp4">
+                    <source  src="" type="video/ogg">
+                    <source  src="" type="video/webm">
+                       <p>Seu navegador não tem compatibilidade para este tipo de video.</p>
+                   </video>
             </section>
             <section id="prizes">
-
+                <h2>Prêmios</h2>
+                <section id="prizes_figure">
+                    <figure>
+                        <img src="img/section_artigos/img1.jpg" alt="">
+                    </figure>
+                    <figure>
+                        <img src="img/section_artigos/img2.jpg" alt="">
+                    </figure>
+                    <figure>
+                        <img src="img/section_artigos/img3.jpg" alt="">
+                    </figure>
+                    <figure>
+                        <img src="img/section_artigos/img4.jpg" alt="">
+                    </figure>
+                    <figure>
+                        <img src="img/section_artigos/img5.jpg" alt="">
+                    </figure>
+                    <figure>
+                        <img src="img/section_artigos/img6.jpg" alt="">
+                    </figure>
+                </section>
             </section>
         </section>
         <footer>
-            <sectio id="logo_baseborad">
-
-            </sectio>
-            <section id="map_website">
-
+            <section id="footer_sub">
+                <sectio id="logo_baseborad">
+                    <figure>
+                        <img src="img/logo_ranchodasaudade.png" alt="logo tipo do Rancho da Saudade">
+                    </figure>
+                </sectio>
+                <section id="map_website">
+                    <section id="map_left">
+                        <ul>
+                            <li><a href="index.html">Home</a></li>
+                            <li><a href="">Sobre</a></li>
+                            <li><a href="">Trabalhos</a></li>
+                            <li><a href="">Contato</a></li>
+                        </ul>
+                    </section>
+                    <section id="map_right">
+                        <ul>
+                            <li><a href="https://www.facebook.com/ranchodasaudade/" target="_blank"><img src="img/icones_redes_contato/facebook_icon.png" alt="Icone do Facebbok para direcionamento para o facebook do rancho da saudade">@ranchodasaudade</a></li>
+                            <li><a href="https://www.instagram.com/ctgranchodasaudade/" target="_blank"><img src="img/icones_redes_contato/instagram-icon.png" alt="Icone do INstagram para direcionamento para o instagram do rancho da saudade">ctgranchodasaudade</a></li>
+                            <li><a href="https://www.youtube.com/channel/UCsJ2wBfnKubs2kqck0CQopg" target="_blank"><img src="img/icones_redes_contato/youtube_icon.png" alt="Icone do Youtube para canal do rancho da saudade no You Tube">CTG Rancho da Saudade - Oficial</a></li>
+                            <li><a href="" target="_blank"><img src="img/icones_redes_contato/whatsapp_icon.png" alt="">119xxxxxxxx</a></li>
+                        </ul>
+                    </section>
+                </section>
+            </section>
+            <section id="dev">
+                <p>Site desenvolvido por <strong>GDCAW</strong></p>
+                <p><strong>&copy; Todos direitos reservados 2022</strong></p>
             </section>
         </footer>
     </main>
