--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <section id="container_slide">
                 
                 <section id="slide">
-                    <p>teste slide</p>
+                    <!-- Slide here -->
                 </section>
                 
             </section>
