--- a/index.html
+++ b/index.html
@@ -51,9 +51,10 @@
                 <div id="cx_nav">
                     <ul id="menuSupense">
                         <li class="menu"><a href="index.html">Home</a></li>
-                        <li class="menu"><a href="">Sobre</a></li>
-                        <li class="menu"><a href="">Trabalhos</a></li>
-                        <li class="menu"><a href="">Contato</a></li>
+                        <li class="menu"><a href="assets/pages/about.html">Sobre</a></li>
+                        <li class="menu"><a href="assets/pages/dp1.html">Departamento1</a></li>
+                        <li class="menu"><a href="assets/pages/dp2.html">Departamento2</a></li>
+                        <li class="menu"><a href="assets/pages/dp3.html">Departamento3</a></li>
                     </ul>
                 </div>
             </nav>
