--- a/assets/pages/dp1.html
+++ b/assets/pages/dp1.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/construcao.css">
-    <title>Document</title>
+    <title>Departamento Artístico</title>
 </head>
 <body>
     <section>
@@ -14,5 +14,6 @@
         </figure>
         <a href="../../index.html"><button value="Voltar" type="button" onclick="">Voltar</button></a>
     </section>
+    <main></main>
 </body>
 </html>
