--- a/index.html
+++ b/index.html
@@ -163,9 +163,13 @@
                     <section id="map_left">
                         <ul>
                             <li><a href="index.html">Home</a></li>
-                            <li><a href="">Sobre</a></li>
-                            <li><a href="">Trabalhos</a></li>
-                            <li><a href="">Contato</a></li>
+                            <li><a href="about.html">Sobre</a></li>
+                            <ul>
+                                <p class="menu_sem_action">Departamentos<p>
+                                <li class="sub-menu-inferior"><a href="artistica.html">Artístico</a></li>
+                                <li class="sub-menu-inferior"><a href="#">Campeiro</a></li>
+                                <li class="sub-menu-inferior"><a href="cultural.html">Cultural</a></li>
+                            </ul>
                         </ul>
                     </section>
                     <section id="map_right">
