--- a/assets/pages/artistica.html
+++ b/assets/pages/artistica.html
@@ -497,7 +497,7 @@
             </section>
             <section class="invernadas-Bottom background-xiru">
                 
-                <h2>Prêmios Mirim</h2>
+                <h2>Prêmios Xirú</h2>
                 <section id="prizes-years">
                     <figure>
                         <img class="prizes-years-slogan" src="../img/section_artigos/img1.jpg" alt="">
@@ -522,7 +522,7 @@
                     </figure>
                 </section>
                 
-                <h2>Coordenação Mirim</h2>
+                <h2>Coordenação Xirú</h2>
                 <section class="coordination">
                     <section class="coordinators">
                         <figure>
