--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <section>
             <section id="container_slide">
                 
-                <section id="slider">
+                <section id="slider" class="slider">
                     <!-- Slide here -->
                     teste
                 </section>
