--- a/assets/pages/about.html
+++ b/assets/pages/about.html
@@ -58,6 +58,11 @@
             </nav>
         </header>
         <section id="content-main">
+            <section id="container_init">
+                <figure>
+                    <img src="../img/historia/nossahistoria.jpg" alt="">
+                </figure>
+            </section>
             <section id="history">
                 <h2>Nossa história</h2>
                 <p>Em setembro de 1986, na Semana Farroupilha, um grupo de amigos, admiradores do tradicionalismo, uniram seus esforços para criarem um CTG no município de Cachoeirinha. Depois de algumas tratativas, achou-se por bem apoiar um CTG já fundado. Logo, após entrar em contato com os CTGs Mãe Crioula e Guapos da Amizade, decidiu-se apoiar o CTG Guapos da Amizade.</p>
