--- a/index.html
+++ b/index.html
@@ -75,41 +75,41 @@
             <section id="artigo_main">
                 <section id="artigo_top">
                     <section class="apresentacao">
-                        <figure><img class="img_artigo" src="assets/img/section_artigos/img3.jpg" alt=""></figure>
+                        <figure><img class="img_artigo" src="assets/img/historia/imagem 5.jpg" alt=""></figure>
                         <h2>Um pouco Sobre nós</h2>
                         <p>O movimento tradicionalista gaúcho caracteriza-se pela valorização da cultura gaúcha, o resgate dos valores inerentes ao homem do campo e a potencialização de atividades artísticas e grupos de dança. Suas estruturas fomentam o intercâmbio de distintos Centros e Movimentos distribuídos em diversas regiões do estado do Rio Grande do Sul e de todo o Brasil, dentre esses grupos está o CTG Rancho da Saudade.</p>    
                     </section>
                     <section class="apresentacao">
-                        <figure><img class="img_artigo" src="assets/img/section_artigos/img2.jpg" alt=""></figure>
+                        <figure><img class="img_artigo" src="assets/img/img_slide/Cerimonia_de_premiacao_em_cachoeirinha.jpg" alt=""></figure>
                         <h2>Patrões</h2>
                         <p>O CTG Rancho da Saudade já teve diversos patrões. A 1ª patronagem foi eleita em 1986, em que o Sr. Telmo Silveira Dorneles foi eleito patrão. O patrão, cargo que administra a instituição, é eleito pelos membros a cada dois anos. O patrão atual é o Senhor Tauner Machado, que foi eleito em 2016 e tem sido reeleito desde então.</p>    
                     </section>
                     <section class="apresentacao">
-                        <figure><img class="img_artigo" src="assets/img/section_artigos/img3.jpg" alt=""></figure>
+                        <figure><img class="img_artigo" src="assets/img/img_slide/pre invernada veterana.jpg" alt=""></figure>
                         <h2>Festival Internacional</h2>
                         <p>No ano de 2011, o CTG Rancho da Saudade foi convidado para representar a América do Sul no Festival Internacional de Folclore de Gannat, na França o ″Les Cultures Du Monde″, um dos mais importantes festivais de folclore do mundo. Na ocasião, "Os Provincianos" também representaram o Brasil em outros festivais menores, como o Cour Du Soir, em Cusset, tendo realizado uma belíssima apresentação em frente à um castelo milenar, no festival da cidade de Cosne D'Allier, e no festival de Saint-Laurent, em Blain, um dos mais antigos da Europa, com 136 edições realizadas em 2011.</p>    
                     </section>
                 </section>
                 <section id="artigo_bottom">
                     <section class="apresentacao">
-                        <figure><img class="img_artigo" src="assets/img/section_artigos/img3.jpg" alt=""></figure>
+                        <figure><img class="img_artigo" src="assets/img/historia/imagem 1.jpg" alt=""></figure>
                         <h2>Um pouco Sobre nós</h2>
                         <p>O movimento tradicionalista gaúcho caracteriza-se pela valorização da cultura gaúcha, o resgate dos valores inerentes ao homem do campo e a potencialização de atividades artísticas e grupos de dança. Suas estruturas fomentam o intercâmbio de distintos Centros e Movimentos distribuídos em diversas regiões do estado do Rio Grande do Sul e de todo o Brasil, dentre esses grupos está o CTG Rancho da Saudade.</p>    
                     </section>
                     <section class="apresentacao">
-                        <figure><img class="img_artigo" src="assets/img/section_artigos/img2.jpg" alt=""></figure>
+                        <figure><img class="img_artigo" src="assets/img/departamentos/departamento_campeiro/departamento campeiro.jpg" alt=""></figure>
                         <h2>Patrões</h2>
                         <p>O CTG Rancho da Saudade já teve diversos patrões. A 1ª patronagem foi eleita em 1986, em que o Sr. Telmo Silveira Dorneles foi eleito patrão. O patrão, cargo que administra a instituição, é eleito pelos membros a cada dois anos. O patrão atual é o Senhor Tauner Machado, que foi eleito em 2016 e tem sido reeleito desde então.</p>    
                     </section>
                     <section class="apresentacao">
-                        <figure><img class="img_artigo" src="assets/img/section_artigos/img3.jpg" alt=""></figure>
+                        <figure><img class="img_artigo" src="assets/img/departamentos/departamento_artístico/invernada_adulta/invernada_adulta_(4).jpg" alt=""></figure>
                         <h2>Festival Internacional</h2>
                         <p>No ano de 2011, o CTG Rancho da Saudade foi convidado para representar a América do Sul no Festival Internacional de Folclore de Gannat, na França o ″Les Cultures Du Monde″, um dos mais importantes festivais de folclore do mundo. Na ocasião, "Os Provincianos" também representaram o Brasil em outros festivais menores, como o Cour Du Soir, em Cusset, tendo realizado uma belíssima apresentação em frente à um castelo milenar, no festival da cidade de Cosne D'Allier, e no festival de Saint-Laurent, em Blain, um dos mais antigos da Europa, com 136 edições realizadas em 2011.</p>    
                     </section>
                 </section>
             </section>
             <section id="institutional">
-                <div id="section_intitutional_video"></div>
+                <div id="section_intitutional_video"><h2>Aqui  vai um video institucional</h2></div>
                 <video id="player" loop poster="" title="Vídeo institucional CTG" preload="none">
                     <source  src="" type="video/mp4">
                     <source  src="" type="video/ogg">
@@ -121,31 +121,88 @@
                 <h2>Prêmios</h2>
                 <section class="customer-logos slider">
                     <div class="slide">
-                        <img src="assets/img/section_artigos/img1.jpg">
+                        <img src="assets/img/premios/premio_juvenil/CampeãJuvenart_2017.png">
                     </div>
                     <div class="slide">
-                        <img src="assets/img/section_artigos/img2.jpg">
+                        <img src="assets/img/premios/premio_juvenil/BicampeãRodeioEstânciaVelha_2018_2019.png">
                     </div>
                     <div class="slide">
-                        <img src="assets/img/section_artigos/img3.jpg">
+                        <img src="assets/img/premios/premio_juvenil/CampeãJuvenart_2019.png">
                     </div>
                     <div class="slide">
-                        <img src="assets/img/section_artigos/img4.jpg">
+                        <img src="assets/img/premios/premio_juvenil/CampeãRodeio35CTG_2022.png">
                     </div>
                     <div class="slide">
-                        <img src="assets/img/section_artigos/img5.jpg">
+                        <img src="assets/img/premios/premio_juvenil/CampeãRodeioCampoVerde_2016_2020.png">
                     </div>
                     <div class="slide">
-                        <img src="assets/img/section_artigos/img6.jpg">
+                        <img src="assets/img/premios/premio_juvenil/CampeãRodeioEncantado_2019.png">
                     </div>
                     <div class="slide">
-                        <img src="assets/img/section_artigos/img7.jpg">
+                        <img src="assets/img/premios/premio_juvenil/CampeãSaraudeArteGaúcha_2016_2022.png">
                     </div>
                     <div class="slide">
-                        <img src="assets/img/section_artigos/img8.jpg">
+                        <img src="assets/img/premios/premio_juvenil/HeptacampeãFestinil–1ªRT.png">
                     </div>
                     <div class="slide">
-                        <img src="assets/img/section_artigos/img9.jpg">
+                        <img src="assets/img/premios/premios_adulto/ENART(2004)-1°LUGAR.png">
+                    </div>
+                    <div class="slide">
+                        <img src="assets/img/premios/premios_adulto/ENART(2007)-1°LUGAR.png">
+                    </div>
+                    <div class="slide">
+                        <img src="assets/img/premios/premios_adulto/ENART(2011)-1°LUGAR.png">
+                    </div>
+                    <div class="slide">
+                        <img src="assets/img/premios/premios_adulto/ENART(2012)-1°LUGAR.png">
+                    </div>
+                    <div class="slide">
+                        <img src="assets/img/premios/premios_adulto/ENART(2014)-1°LUGAR.png">
+                    </div>
+                    <div class="slide">
+                        <img src="assets/img/premios/premios_adulto/ENART(2018)-1°LUGAR.png">
+                    </div>
+                    <div class="slide">
+                        <img src="assets/img/premios/premios_adulto/MelhoCcoreografiaDeSaída-2005.png">
+                    </div>
+                    <div class="slide">
+                        <img src="assets/img/premios/premios_adulto/MelhorCoreografiaDeEmtrada_2010.png">
+                    </div>
+                    <div class="slide">
+                        <img src="assets/img/premios/premios_adulto/MelhorCoreografiaDeEntrada_2018.png">
+                    </div>
+                    <div class="slide">
+                        <img src="assets/img/premios/premios_adulto/MelhorMusical_2007.png">
+                    </div>
+                    <div class="slide">
+                        <img src="assets/img/premios/premios_adulto/MelhorMusical_2008.png">
+                    </div>
+                    <div class="slide">
+                        <img src="assets/img/premios/premios_adulto/vencedordo21ªFestivalInternacionaldeCulturaeArtedeBüyükçekmece_2021.png">
+                    </div>
+                    <div class="slide">
+                        <img src="assets/img/premios/premios_adulto/vencedordoCheonanWorldDance_2021.png">
+                    </div>
+                    <div class="slide">
+                        <img src="assets/img/premios/premios_mirim/CampeãdoFestirim–1ªRT_2008.png">
+                    </div>
+                    <div class="slide">
+                        <img src="assets/img/premios/premios_mirim/CampeãdoFestirim–1ªRT_2014.png">
+                    </div>
+                    <div class="slide">
+                        <img src="assets/img/premios/premios_mirim/CampeãdoRodeiodeOsório_2015.png">
+                    </div>
+                    <div class="slide">
+                        <img src="assets/img/premios/premios_mirim/CampeãdoSaraudeArteGaúcha_2015.png">
+                    </div>
+                    <div class="slide">
+                        <img src="assets/img/premios/premios_veterana/CampeãFestxiruanos_2022.png">
+                    </div>
+                    <div class="slide">
+                        <img src="assets/img/premios/premios_veterana/CampeãRodeioCapãodaCanoa_2022.png">
+                    </div>
+                    <div class="slide">
+                        <img src="assets/img/premios/premios_xiru/1ºlugarnoSaraudeArteGaúcha_2022.png">
                     </div>
                 </section>
             </section>
